pngdec: Fix interlaced PAETH prediction Fixes Ticket161

Signed-off-by: Michael Niedermayer <michaelni@gmx.at>